--- a/Back/package.json
+++ b/Back/package.json
@@ -1,34 +1,28 @@
 {
   "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "nodemon app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "repository": {
+    "type": "git",
+    "url": "https://git-codecommit.us-east-1.amazonaws.com/v1/repos/udemy-course-nodejs-complete"
+  },
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.18.3"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.0.3",
-    "csurf": "^1.9.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
-    "nodemailer": "^4.6.8",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "express-validator": "^5.3.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.2",
+    "multer": "^1.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
