--- a/Front/music-player/package.json
+++ b/Front/music-player/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-progress-bar": "^0.1.0",
+    "react-progressbar": "^15.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
