--- a/Cross Platform/music_player/pubspec.yaml
+++ b/Cross Platform/music_player/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
