--- a/Cross Platform/music_player/android/app/src/main/AndroidManifest.xml
+++ b/Cross Platform/music_player/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.music_player">
+    <user-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="music_player"
+        android:label="iMusic"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
