--- a/Cross Platform/music_player/pubspec.yaml
+++ b/Cross Platform/music_player/pubspec.yaml
@@ -29,12 +29,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audio_video_progress_bar: ^1.0.1
   bloc: ^8.1.2
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dio: ^5.2.1+1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  just_audio: ^0.9.34
+  just_audio_background: ^0.0.1-beta.10
+  rxdart: ^0.27.7
   shared_preferences: ^2.1.2
 
 dev_dependencies:
