--- a/Cross Platform/music_player/pubspec.yaml
+++ b/Cross Platform/music_player/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,13 +34,18 @@ dependencies:
   cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dio: ^5.2.1+1
+  file_picker: ^5.3.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  image_picker: ^0.8.9
   just_audio: ^0.9.34
   just_audio_background: ^0.0.1-beta.10
   rxdart: ^0.27.7
   shared_preferences: ^2.1.2
+
+dependency_overrides:
+  win32: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -51,7 +56,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
