--- a/Cross Platform/music_player/web/manifest.json
+++ b/Cross Platform/music_player/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "music_player",
-    "short_name": "music_player",
+    "name": "iMusic",
+    "short_name": "iMusic",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
