--- a/Back/package.json
+++ b/Back/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
     "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0"
