--- a/Back/package.json
+++ b/Back/package.json
@@ -22,8 +22,10 @@
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
     "firebase-app": "^0.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.0"
   },
   "devDependencies": {
