--- a/Back/package.json
+++ b/Back/package.json
@@ -26,7 +26,9 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "nodemailer": "^6.9.3",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
