--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 10000",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -30,7 +30,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.0",
     "nodemailer": "^6.9.3",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "sinon": "^15.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
