added documentation for feed and started documentation for Auth

--- a/Back/package.json
+++ b/Back/package.json
@@ -34,6 +34,8 @@
     "sinon": "^15.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
